deploy: a94dc38c2c4ae19420170523a5fbee4ec42ad37b

--- a/documentation/shinyapps/data-validation/index.html
+++ b/documentation/shinyapps/data-validation/index.html
@@ -26,7 +26,7 @@
   
     
   
-  <meta name="description" content="install metalabr">
+  <meta name="description" content="To ensure that new datasets being added to the MetaLab website are valid, run the Data Validation application. The application tests the new datasets on different criteria, such as the existence of necessary columns (ex. fields in the “long_cite” column are required), the appropriate length of a certain column (ex. fields in the “short_cite” column should be less than length of 60 characters), and the appropriate range of a certain column (ex.">
 
   <link href="/rmarkdown-libs/datatables-css/datatables-crosstalk.css" rel="stylesheet">
   <link href="/rmarkdown-libs/dt-core-bootstrap/css/dataTables.bootstrap.min.css" rel="stylesheet">
@@ -272,7 +272,7 @@
   <meta property="og:site_name" content="MetaLab">
   <meta property="og:url" content="http://metalab.stanford.edu/documentation/shinyapps/data-validation/">
   <meta property="og:title" content="Data Validator | MetaLab">
-  <meta property="og:description" content="install metalabr"><meta property="og:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="To ensure that new datasets being added to the MetaLab website are valid, run the Data Validation application. The application tests the new datasets on different criteria, such as the existence of necessary columns (ex. fields in the “long_cite” column are required), the appropriate length of a certain column (ex. fields in the “short_cite” column should be less than length of 60 characters), and the appropriate range of a certain column (ex."><meta property="og:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -731,7 +731,11 @@
           <h1>Data Validator</h1>
 
           <div class="article-style">
-            <p>install metalabr</p>
+            <p>To ensure that new datasets being added to the MetaLab website are valid, run the Data Validation application. The application tests the new datasets on different criteria, such as the existence of necessary columns (ex. fields in the “long_cite” column are required), the appropriate length of a certain column (ex. fields in the “short_cite” column should be less than length of 60 characters), and the appropriate range of a certain column (ex. fields in the “corr” column should have a value between -1 and 1).</p>
+<p>The data validation tool allows you to validate datasets from 3 different sources:</p>
+<p><strong>MetaLab Data</strong> - these datasets are already part of the MetaLab database</p>
+<p><strong>External URL</strong> - this allows you to validate a Google sheet by providing the Google sheet URL</p>
+<p><strong>Upload CSV</strong> - this allows you to validate a csv file that is on your local computer</p>
 
           </div>
 
