deploy: 7ef90861297ba38a608ea7b30d7e77634b03dd11

--- a/people/sara/index.html
+++ b/people/sara/index.html
@@ -26,7 +26,7 @@
   
     
   
-  <meta name="description" content="selshawa96@gmail.com &lt;br&gt; saraelshawa.com">
+  <meta name="description" content="selshawa96@gmail.com &lt;br&gt; https://saraelshawa.com/">
 
   <link href="/rmarkdown-libs/datatables-css/datatables-crosstalk.css" rel="stylesheet">
   <link href="/rmarkdown-libs/dt-core-bootstrap/css/dataTables.bootstrap.min.css" rel="stylesheet">
@@ -271,7 +271,7 @@
   <meta property="og:site_name" content="MetaLab">
   <meta property="og:url" content="http://metalab.stanford.edu/people/sara/">
   <meta property="og:title" content="Sara El-Shawa | MetaLab">
-  <meta property="og:description" content="selshawa96@gmail.com &lt;br&gt; saraelshawa.com"><meta property="og:image" content="http://metalab.stanford.edu/people/sara/featured.jpg.jpg">
+  <meta property="og:description" content="selshawa96@gmail.com &lt;br&gt; https://saraelshawa.com/"><meta property="og:image" content="http://metalab.stanford.edu/people/sara/featured.jpg.jpg">
   <meta property="twitter:image" content="http://metalab.stanford.edu/people/sara/featured.jpg.jpg"><meta property="og:locale" content="en-us">
   
     
