--- a/team/index.html
+++ b/team/index.html
@@ -1136,7 +1136,7 @@
     
     <a href="/people/sara/" class="summary-link">
       <div class="article-style">
-        <a href="mailto:selshawa96@gmail.com">selshawa96@gmail.com</a> <br> saraelshawa.com
+        <a href="mailto:selshawa96@gmail.com">selshawa96@gmail.com</a> <br> <a href="https://saraelshawa.com/">https://saraelshawa.com/</a>
       </div>
     </a>
     
