--- a/index.html
+++ b/index.html
@@ -620,8 +620,8 @@
 
 
 <p>Interactive, community-augmented meta-analysis tools for cognitive development research</p>
-<div id="new-the-2020-contribution-challenge" class="section level4">
-<h4>New: The <a href="/documentation/challenge">2020 Contribution Challenge</a></h4>
+<div id="new-the-2020-contribution-challenge-winners" class="section level4">
+<h4>New: The <a href="/documentation/challenge">2020 Contribution Challenge Winners</a></h4>
 </div>
 </div>
     
