--- a/documentation/challenge/index.html
+++ b/documentation/challenge/index.html
@@ -27,7 +27,8 @@
     
   
   <meta name="description" content="Contribution Challenge 2020 Winners The 2020 contribution challenge has closed and we received a record number of 9 submissions, thanks to all who joined and to the Fetzer Franklin Fund for their support. We are working on making the data available on MetaLab.
-The three winners are: * Gabrielle Strouse (University of South Dakota) with a meta-analysis on whether infants learn from video just as well as from live interaction, and the results are already published: doi.">
+The three winners are:
+ Gabrielle Strouse (University of South Dakota) with a meta-analysis on whether infants learn from video just as well as from live interaction, and the results are already published: doi.">
 
   <link href="/rmarkdown-libs/datatables-css/datatables-crosstalk.css" rel="stylesheet">
   <link href="/rmarkdown-libs/dt-core-bootstrap/css/dataTables.bootstrap.min.css" rel="stylesheet">
@@ -274,7 +275,8 @@ The three winners are: * Gabrielle Strouse (University of South Dakota) with a m
   <meta property="og:url" content="http://metalab.stanford.edu/documentation/challenge/">
   <meta property="og:title" content="Contribution Challenge | MetaLab">
   <meta property="og:description" content="Contribution Challenge 2020 Winners The 2020 contribution challenge has closed and we received a record number of 9 submissions, thanks to all who joined and to the Fetzer Franklin Fund for their support. We are working on making the data available on MetaLab.
-The three winners are: * Gabrielle Strouse (University of South Dakota) with a meta-analysis on whether infants learn from video just as well as from live interaction, and the results are already published: doi."><meta property="og:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+The three winners are:
+ Gabrielle Strouse (University of South Dakota) with a meta-analysis on whether infants learn from video just as well as from live interaction, and the results are already published: doi."><meta property="og:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -741,7 +743,12 @@ The three winners are: * Gabrielle Strouse (University of South Dakota) with a m
 <div id="contribution-challenge-2020-winners" class="section level2">
 <h2>Contribution Challenge 2020 Winners</h2>
 <p>The 2020 contribution challenge has closed and we received a record number of 9 submissions, thanks to all who joined and to the Fetzer Franklin Fund for their support. We are working on making the data available on MetaLab.</p>
-<p>The three winners are: * Gabrielle Strouse (University of South Dakota) with a meta-analysis on whether infants learn from video just as well as from live interaction, and the results are already published: doi.org/10.1111/cdev.13429 * Z. L. Zhou (UCLA) with a meta-analysis on the time course of native-language phonotactic learning; stay tuned for a full paper. * Loretta Gasparini (European Master’s in Clinical Linguistics+) on infants' preference for their native language and ability to discriminate between languages and accents, a preprint is available here: doi.org/10.31219/osf.io/rmn5x</p>
+<p>The three winners are:</p>
+<ul>
+<li><p>Gabrielle Strouse (University of South Dakota) with a meta-analysis on whether infants learn from video just as well as from live interaction, and the results are already published: doi.org/10.1111/cdev.13429</p></li>
+<li><p>Z. L. Zhou (UCLA) with a meta-analysis on the time course of native-language phonotactic learning; stay tuned for a full paper.</p></li>
+<li><p>Loretta Gasparini (European Master’s in Clinical Linguistics+) on infants' preference for their native language and ability to discriminate between languages and accents, a preprint is available here: doi.org/10.31219/osf.io/rmn5x</p></li>
+</ul>
 <div id="the-contribution-challenge-2020-call" class="section level4">
 <h4>The Contribution Challenge 2020 Call</h4>
 <p>To celebrate the latest (ongoing) upgrade and the inclusion of 25 meta-analyses to date, the MetaLab team with support of the Fetzer Franklin Fund is organizing a challenge for authors of meta-analyses on cognitive development (data challenge) and for contributors of shiny apps (code challenge). The contribution challenge will offer three $1,000 US in cash prizes distributed between (teams of) authors or coders, who contribute meta-analysis data to the MetaLab database or, who make substantial contributions to the site, for example proposing and implementing a shiny app providing a new analysis or functionality in coordination with the MetaLab team. Deadline is 2020-10-15 (15 October). You can find more information here: <a href="https://bit.ly/MetaLabChallenge2020" class="uri">https://bit.ly/MetaLabChallenge2020</a></p>
