deploy: ec9558276490708d00e01b34231dcd73a8ab0ae0

--- a/dataset/famword/index.html
+++ b/dataset/famword/index.html
@@ -544,7 +544,9 @@
 <div class="row">
 <div class="col-sm-12">
 <ul>
-<li>Carbajal (2018)</li>
+<li>
+<a href="https://psyarxiv.com/63wvm/">Carbajal et al. (2020)</a>
+</li>
 <li>N papers = 16, N experiments = 34, N participants = 658</li>
 <li>Do infants distingusih familiar words from novel/rare words in listening tasks?</li>
 <li>Curator is Julia Carbajal</li>
