--- a/dataset/inworddb_function/index.html
+++ b/dataset/inworddb_function/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://sites.google.com/site/inworddb/">Bergmann &amp; Cristia (2016)</a>
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/desc.12341">Bergmann &amp; Cristia (2016)</a>
 </li>
 <li>N papers = 5, N experiments = 17, N participants = 290</li>
 <li>Recognition of familiarized function words from natural speech using behavioral methods.</li>
