--- a/dataset/mps/index.html
+++ b/dataset/mps/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://drive.google.com/drive/folders/1Z5ruOSPydAXYpqCygmixcXKUgqD0BDfD">Von Holzen &amp; Bergmann (2018)</a>
+<a href="https://psyarxiv.com/dze29/">Von Holzen &amp; Bergmann (2019)</a>
 </li>
 <li>N papers = 32, N experiments = 251, N participants = 2047</li>
 <li>Can infants distinguish correctly and mispronounced words, like dog and tog?</li>
