--- a/dataset/phonotactics/index.html
+++ b/dataset/phonotactics/index.html
@@ -544,7 +544,9 @@
 <div class="row">
 <div class="col-sm-12">
 <ul>
-<li>Cristia (2018)</li>
+<li>
+<a href="https://osf.io/jffa5/">Cristia (2018)</a>
+</li>
 <li>N papers = 15, N experiments = 47, N participants = 890</li>
 <li>Infants' ability to learn phonotactic generalizations from a short exposure.</li>
 <li>Curator is Alex Cristia</li>
