--- a/dataset/prosocial/index.html
+++ b/dataset/prosocial/index.html
@@ -544,7 +544,9 @@
 <div class="row">
 <div class="col-sm-12">
 <ul>
-<li>Margoni &amp; Surian (2018)</li>
+<li>
+<a href="https://psycnet.apa.org/fulltext/2018-33347-001.pdf">Margoni &amp; Surian (2018)</a>
+</li>
 <li>N papers = 26, N experiments = 61, N participants = 1244</li>
 <li>Do infants prefer a prosocial agent over an antisocial agent?</li>
 <li>Curator is Francesco Margoni</li>
