--- a/dataset/rulelearning/index.html
+++ b/dataset/rulelearning/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://drive.google.com/drive/folders/1dP91H5QlcT3PD9fKCndroMGcXEzP98xI">Rabagliati et al. (2018)</a>
+<a href="https://onlinelibrary.wiley.com/doi/pdf/10.1111/desc.12704">Rabagliati et al. (2018)</a>
 </li>
 <li>N papers = 20, N experiments = 95, N participants = 1111</li>
 <li>Can infants learn abstract repition rules from different types of stimuli?</li>
