--- a/dataset/speechpref/index.html
+++ b/dataset/speechpref/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://drive.google.com/open?id=1CNz2dV6T3hyfxd2m0GSe1TzERaqT151ELpMPpfcEdcI">Issard &amp; Cristia (in prep.)</a>
+<a href="https://osf.io/4stz9/">Issard, Tsuji, &amp; Cristia (in prep.)</a>
 </li>
 <li>N papers = 18, N experiments = 54, N participants = 754</li>
 <li>Do infants prefer natural speech over other types of sound?</li>
