--- a/dataset/statseg/index.html
+++ b/dataset/statseg/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://github.com/christinabergmann/StatLearnDB">Black &amp; Bergmann (2017)</a>
+<a href="https://pure.mpg.de/rest/items/item_2475527_3/component/file_2475525/content">Black &amp; Bergmann (2017)</a>
 </li>
 <li>N papers = 31, N experiments = 103, N participants = 1546</li>
 <li>Can infants segment words from artificial mini-languages based on syllable-level statistics?</li>
