--- a/dataset/switchtask/index.html
+++ b/dataset/switchtask/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://drive.google.com/drive/folders/15-R_Nvm5sU2rakIH4s4U7ANue_bzm4Qu">Tsui et al. (2019)</a>
+<a href="https://psycnet.apa.org/record/2019-06351-001">Tsui et al. (2019)</a>
 </li>
 <li>N papers = 47, N experiments = 143, N participants = 2764</li>
 <li>Infant word learning in the switch task</li>
