--- a/dataset/symbolism/index.html
+++ b/dataset/symbolism/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://pure.uva.nl/ws/files/22575657/Fort_et_al_2018_Developmental_Science.pdf">Lammertink et al. (2016)</a>
+<a href="https://doi.org/10.1111/desc.12659">Lammertink et al. (2016)</a>
 </li>
 <li>N papers = 11, N experiments = 44, N participants = 425</li>
 <li>Bias to assume a non-arbitrary relationship between form and meaning ("bouba-kiki effect") in forced-choice paradigms.</li>
