--- a/dataset/inphondb-native/index.html
+++ b/dataset/inphondb-native/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://sites.google.com/site/inphondb/">Tsuji &amp; Cristia (2014)</a>
+<a href="https://pure.mpg.de/rest/items/item_1836135/component/file_1945376/content">Tsuji &amp; Cristia (2014)</a>
 </li>
 <li>N papers = 33, N experiments = 145, N participants = 2491</li>
 <li>Discrimination of native-language vowels, including results from a variety of methods.</li>
