--- a/dataset/inworddb/index.html
+++ b/dataset/inworddb/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://sites.google.com/site/inworddb/">Bergmann &amp; Cristia (2016)</a>
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/desc.12341">Bergmann &amp; Cristia (2016)</a>
 </li>
 <li>N papers = 69, N experiments = 299, N participants = 5699</li>
 <li>Recognition of familiarized content or non-words from running, natural speech using behavioral methods.</li>
