--- a/dataset/mutex/index.html
+++ b/dataset/mutex/index.html
@@ -545,7 +545,7 @@
 <div class="col-sm-12">
 <ul>
 <li>
-<a href="https://doi.org/10.31234/osf.io/wsx3a">(Lewis, Cristiano, Lake, Kwan, &amp; Frank, under review)</a>
+<a href="https://psyarxiv.com/wsx3a">(Lewis, Cristiano, Lake, Kwan, &amp; Frank, under review)</a>
 </li>
 <li>N papers = 48, N experiments = 146, N participants = 2505</li>
 <li>Bias to assume that a novel word refers to a novel object in forced-choice paradigms.</li>
