--- a/dataset/sounds/index.html
+++ b/dataset/sounds/index.html
@@ -544,7 +544,9 @@
 <div class="row">
 <div class="col-sm-12">
 <ul>
-<li>Cristia (2018)</li>
+<li>
+<a href="https://osf.io/jffa5/">Cristia (2018)</a>
+</li>
 <li>N papers = 11, N experiments = 20, N participants = 634</li>
 <li>Infants' ability to learn sound categories from their acoustic distribution.</li>
 <li>Curator is Alex Cristia</li>
