--- a/documentation/using_ma_data/contribute_ma/index.html
+++ b/documentation/using_ma_data/contribute_ma/index.html
@@ -617,6 +617,10 @@ Adding unpublished data. Ideally we can link to a report on the data, for exampl
 
   <li class=""><a href="/documentation/using_ma_data/plan_studies_interpret_results/">Planning Studies and Interpreting Results</a></li>
 
+
+
+  <li class=""><a href="/documentation/using_ma_data/citation_policy/">Citation Policy</a></li>
+
       
         </ul>
       
