--- a/documentation/why_do_a_ma/index.html
+++ b/documentation/why_do_a_ma/index.html
@@ -619,6 +619,10 @@ Why are single studies not enough? When thinking about development, we often loo
 
   <li class=""><a href="/documentation/using_ma_data/plan_studies_interpret_results/">Planning Studies and Interpreting Results</a></li>
 
+
+
+  <li class=""><a href="/documentation/using_ma_data/citation_policy/">Citation Policy</a></li>
+
       
         </ul>
       
