--- a/publications/index.html
+++ b/publications/index.html
@@ -553,11 +553,9 @@
 <p>MetaLab encourages researchers to use data available on its
 website. For example, you can cite meta-analytic results, or download
 datasets and and conduct custom analyses. Before using MetaLab data in
-your publication, we ask that you please read our <a href="/documentation#citation_policy">citation
+your publication, we ask that you please read our <a href="/documentation/using_ma_data/citation_policy">citation
 policy</a>.</p>
 <h2 id="list-of-publications-that-use-metalab-data">List of publications that use MetaLab data</h2>
-<p>If you have a publication to add to this list, please let us know at
-<a href="mailto:placeholder@stanford.edu">placeholder@stanford.edu</a></p>
 <p><strong>Bergmann, C. Tsuji, S., &amp; Cristia, A. (2017).</strong> Top-down versus bottom-up theories of phonological acquisition: A big data approach. In: <em>Proceedings of Interspeech 2017</em>, pp. 2013–2016. DOI: 10.21437/Interspeech.2017-1443 <a href="http://www.isca-speech.org/archive/Interspeech_2017/abstracts/1443.html" target="_blank" rel="noopener">[Paper]</a></p>
 <p><strong>Bergmann, C., Tsuji, S., Piccinini, P.E., Lewis, M.L., Braginsky, M., Frank, M.C., &amp; Cristia, A. (2018).</strong> Promoting replicability in developmental research through meta-analyses: Insights from language acquisition research. <em>Child Development, 89</em>, 1996-2009 . DOI: 10.1111/cdev.13079 <a href="https://osf.io/uhv3d/" target="_blank" rel="noopener">[Repository]</a></p>
 <p><strong>Lewis, M. L., Braginsky, M., Tsuji, S., Bergmann, C., Piccinini, P. E., Cristia, A., &amp; Frank, M. C. (2017/under review).</strong> A Quantitative Synthesis of Early Language Acquisition Using Meta-Analysis. DOI: 10.17605/OSF.IO/HTSJM <a href="http://psyarxiv.com/htsjm" target="_blank" rel="noopener">[Preprint]</a></p>
