--- a/documentation/challenge/index.html
+++ b/documentation/challenge/index.html
@@ -619,6 +619,10 @@ The three winners are:
 
   <li class=""><a href="/documentation/using_ma_data/plan_studies_interpret_results/">Planning Studies and Interpreting Results</a></li>
 
+
+
+  <li class=""><a href="/documentation/using_ma_data/citation_policy/">Citation Policy</a></li>
+
       
         </ul>
       
