--- a/documentation/using_ma_data/index.html
+++ b/documentation/using_ma_data/index.html
@@ -612,6 +612,10 @@
 
   <li class=""><a href="/documentation/using_ma_data/plan_studies_interpret_results/">Planning Studies and Interpreting Results</a></li>
 
+
+
+  <li class=""><a href="/documentation/using_ma_data/citation_policy/">Citation Policy</a></li>
+
       
         </ul>
       
