deploy: 0c7b9f6b13e5b4e41394ee8b10003c0aa4d5d7c3

--- a/dataset/labadv/index.html
+++ b/dataset/labadv/index.html
@@ -544,7 +544,9 @@
 <div class="row">
 <div class="col-sm-12">
 <ul>
-<li>Lewis &amp; Long (unpublished)</li>
+<li>
+<a href="https://docs.google.com/spreadsheets/d/1JPvqBQVK7vPAMNPu7UQFW95xJoz8ga7-_t4k7VmxzR4/edit#gid=0">Lewis &amp; Long (unpublished)</a>
+</li>
 <li>N papers = 18, N experiments = 102, N participants = 1664</li>
 <li>Infants' categorization judgments in the presence and absence of labels.</li>
 <li>Curator is Molly Lewis</li>
