--- a/dataset/crosssituational/index.html
+++ b/dataset/crosssituational/index.html
@@ -544,7 +544,9 @@
 <div class="row">
 <div class="col-sm-12">
 <ul>
-<li>Dal Ben et al. (2019)</li>
+<li>
+<a href="https://doi.org/10.17605/OSF.IO/GU9RB">Dal Ben et al. (2019)</a>
+</li>
 <li>N papers = 16, N experiments = 50, N participants = 2271</li>
 <li>Infants and children s abilities to learn words across multiple ambiguous situations.</li>
 <li>Curator is Rodrigo Dal Ben</li>
