deploy: 4b9c18d2d65d515233bc3f8d033b4e5aa2bff211

--- a/dataset/inworddb/index.html
+++ b/dataset/inworddb/index.html
@@ -270,7 +270,7 @@
   
   <meta property="og:site_name" content="MetaLab">
   <meta property="og:url" content="http://metalab.stanford.edu/dataset/inworddb/">
-  <meta property="og:title" content="Word segmentation | MetaLab">
+  <meta property="og:title" content="Word segmentation (behavioral) | MetaLab">
   <meta property="og:description" content="Recognition of familiarized content or non-words from running, natural speech using behavioral methods.&lt;br&gt;69 papers | 299 experiments | 5699 subjects"><meta property="og:image" content="http://metalab.stanford.edu/dataset/inworddb/featured.png">
   <meta property="twitter:image" content="http://metalab.stanford.edu/dataset/inworddb/featured.png"><meta property="og:locale" content="en-us">
   
@@ -294,7 +294,7 @@
 
 
 
-  <title>Word segmentation | MetaLab</title>
+  <title>Word segmentation (behavioral) | MetaLab</title>
 
 </head>
 
@@ -539,8 +539,8 @@
 <script src="/rmarkdown-libs/crosstalk/js/crosstalk.min.js"></script>
 
 
-<div id="word-segmentation" class="section level1">
-<h1>Word segmentation</h1>
+<div id="word-segmentation-behavioral" class="section level1">
+<h1>Word segmentation (behavioral)</h1>
 <div class="row">
 <div class="col-sm-12">
 <ul>
