--- a/dataset/switchtask/index.html
+++ b/dataset/switchtask/index.html
@@ -270,7 +270,7 @@
   
   <meta property="og:site_name" content="MetaLab">
   <meta property="og:url" content="http://metalab.stanford.edu/dataset/switchtask/">
-  <meta property="og:title" content="Switch Task | MetaLab">
+  <meta property="og:title" content="Switch task | MetaLab">
   <meta property="og:description" content="Infant word learning in the switch task&lt;br&gt;47 papers | 143 experiments | 2764 subjects"><meta property="og:image" content="http://metalab.stanford.edu/dataset/switchtask/featured.png">
   <meta property="twitter:image" content="http://metalab.stanford.edu/dataset/switchtask/featured.png"><meta property="og:locale" content="en-us">
   
@@ -294,7 +294,7 @@
 
 
 
-  <title>Switch Task | MetaLab</title>
+  <title>Switch task | MetaLab</title>
 
 </head>
 
@@ -540,7 +540,7 @@
 
 
 <div id="switch-task" class="section level1">
-<h1>Switch Task</h1>
+<h1>Switch task</h1>
 <div class="row">
 <div class="col-sm-12">
 <ul>
