--- a/dataset/synboot/index.html
+++ b/dataset/synboot/index.html
@@ -270,7 +270,7 @@
   
   <meta property="og:site_name" content="MetaLab">
   <meta property="og:url" content="http://metalab.stanford.edu/dataset/synboot/">
-  <meta property="og:title" content="Syntactic Bootstrapping | MetaLab">
+  <meta property="og:title" content="Syntactic bootstrapping | MetaLab">
   <meta property="og:description" content="Whether infants can correctly identify the references of the novel verbs embedded in a syntactically informative context.&lt;br&gt;18 papers | 60 experiments | 832 subjects"><meta property="og:image" content="http://metalab.stanford.edu/dataset/synboot/featured.png">
   <meta property="twitter:image" content="http://metalab.stanford.edu/dataset/synboot/featured.png"><meta property="og:locale" content="en-us">
   
@@ -294,7 +294,7 @@
 
 
 
-  <title>Syntactic Bootstrapping | MetaLab</title>
+  <title>Syntactic bootstrapping | MetaLab</title>
 
 </head>
 
@@ -540,7 +540,7 @@
 
 
 <div id="syntactic-bootstrapping" class="section level1">
-<h1>Syntactic Bootstrapping</h1>
+<h1>Syntactic bootstrapping</h1>
 <div class="row">
 <div class="col-sm-12">
 <ul>
