--- a/dataset/wsnm/index.html
+++ b/dataset/wsnm/index.html
@@ -271,7 +271,7 @@
   
   <meta property="og:site_name" content="MetaLab">
   <meta property="og:url" content="http://metalab.stanford.edu/dataset/wsnm/">
-  <meta property="og:title" content="Infants’ Word Segmentation tested with Brain Measures | MetaLab">
+  <meta property="og:title" content="Word segmentation (neuro) | MetaLab">
   <meta property="og:description" content="Infants’ recognition of familiarized content from running natural speech using brain measures&lt;br&gt;1 papers | 6 experiments | 69 subjects"><meta property="og:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
@@ -295,7 +295,7 @@
 
 
 
-  <title>Infants’ Word Segmentation tested with Brain Measures | MetaLab</title>
+  <title>Word segmentation (neuro) | MetaLab</title>
 
 </head>
 
@@ -540,8 +540,8 @@
 <script src="/rmarkdown-libs/crosstalk/js/crosstalk.min.js"></script>
 
 
-<div id="infants-word-segmentation-tested-with-brain-measures" class="section level1">
-<h1>Infants’ Word Segmentation tested with Brain Measures</h1>
+<div id="word-segmentation-neuro" class="section level1">
+<h1>Word segmentation (neuro)</h1>
 <div class="row">
 <div class="col-sm-12">
 <ul>
