deploy: c08df21ee6433784b5b8332239d17ff7357913b3

--- a/documentation/shinyapps/power-simulation/index.html
+++ b/documentation/shinyapps/power-simulation/index.html
@@ -26,7 +26,7 @@
   
     
   
-  <meta name="description" content="install metalabr">
+  <meta name="description" content="This page is under revision, access the previous tutorial here.">
 
   <link href="/rmarkdown-libs/datatables-css/datatables-crosstalk.css" rel="stylesheet">
   <link href="/rmarkdown-libs/dt-core-bootstrap/css/dataTables.bootstrap.min.css" rel="stylesheet">
@@ -272,7 +272,7 @@
   <meta property="og:site_name" content="MetaLab">
   <meta property="og:url" content="http://metalab.stanford.edu/documentation/shinyapps/power-simulation/">
   <meta property="og:title" content="Power Simulation | MetaLab">
-  <meta property="og:description" content="install metalabr"><meta property="og:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="This page is under revision, access the previous tutorial here."><meta property="og:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="http://metalab.stanford.edu/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -735,7 +735,7 @@
           <h1>Power Simulation</h1>
 
           <div class="article-style">
-            <p>install metalabr</p>
+            <p>This page is under revision, access the previous tutorial <a href="https://langcog.github.io/metalab2/documentation.html" target="_blank" rel="noopener">here</a>.</p>
 
           </div>
 
