--- a/documentation/faq/index.html
+++ b/documentation/faq/index.html
@@ -738,7 +738,7 @@
             
 
 
-<p>FAQ</p>
+<p>This page is under revision, access the previous tutorial <a href="https://langcog.github.io/metalab2/documentation.html">here</a>.</p>
 
           </div>
 
