--- a/documentation/getting-started/index.html
+++ b/documentation/getting-started/index.html
@@ -735,7 +735,7 @@
           <h1>Getting Started</h1>
 
           <div class="article-style">
-            <p>Getting started with MetaLab</p>
+            <p>This page is under revision, access the previous tutorial <a href="https://langcog.github.io/metalab2/documentation.html" target="_blank" rel="noopener">here</a>.</p>
 
           </div>
 
