deploy: 107c5fb52ef7bd2760f7f99376845bc632459a1f

--- a/explore/datasets/index.html
+++ b/explore/datasets/index.html
@@ -1155,7 +1155,7 @@
     
     <a href="https://langcog.github.io/metalab/dataset/idspref/" class="summary-link">
       <div class="article-style">
-        Looking times as a function of whether infant-directed vs. adult-directed speech is presented as stimulation.<br>NA papers | NA experiments | NA subjects
+        Looking times as a function of whether infant-directed vs. adult-directed speech is presented as stimulation.<br>23 papers | 75 experiments | 1220 subjects
       </div>
     </a>
     
