--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 
   <div class="col-5 mx-auto col-md-5 order-md-3">
     <div>
-      The MetaLab database contains <b>2,422 effect sizes</b> from <b>30 meta-analyses</b> across two domains of cognitive development, based on data from <b>665 papers</b> and <b>44,040 subjects</b>.
+      The MetaLab database contains <b>2,497 effect sizes</b> from <b>30 meta-analyses</b> across two domains of cognitive development, based on data from <b>688 papers</b> and <b>45,260 subjects</b>.
     </div>
     <div class="hero-media">
       <a href= " /app/visualization"><img src="https://langcog.github.io/metalab/media/viz.png" alt=""></a>
@@ -748,13 +748,13 @@
         24 meta-analyses
       </div>
       <div class="col-sm-3">
-        NA papers
+        551 papers
       </div>
       <div class="col-sm-3">
-        NA effect sizes
+        2,135 effect sizes
       </div>
       <div class="col-sm-3">
-      NA subjects
+      38,977 subjects
       </div>
     </div> 
     </div>
