--- a/report/hierarchicalrandomeffect/index.html
+++ b/report/hierarchicalrandomeffect/index.html
@@ -704,21 +704,21 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <pre><code>## 
 ## Random-Effects Model (k = 299; tau^2 estimator: REML)
 ## 
-##    logLik   deviance        AIC        BIC       AICc 
-## -144.6900   289.3799   293.3799   300.7741   293.4206   
+##    logLik   deviance        AIC        BIC       AICc  
+## -144.6900   289.3799   293.3799   300.7741   293.4206  
 ## 
 ## tau^2 (estimated amount of total heterogeneity): 0.1023 (SE = 0.0115)
 ## tau (square root of estimated tau^2 value):      0.3199
 ## I^2 (total heterogeneity / total variability):   76.99%
 ## H^2 (total variability / sampling variability):  4.35
 ## 
-## Test for Heterogeneity:
+## Test for Heterogeneity: 
 ## Q(df = 298) = 1143.3988, p-val &lt; .0001
 ## 
 ## Model Results:
 ## 
-## estimate      se    zval    pval   ci.lb   ci.ub 
-##   0.2099  0.0218  9.6275  &lt;.0001  0.1672  0.2526  *** 
+## estimate      se    zval    pval   ci.lb   ci.ub     
+##   0.2099  0.0218  9.6275  &lt;.0001  0.1672  0.2526  ***
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -730,21 +730,21 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <pre><code>## 
 ## Multivariate Meta-Analysis Model (k = 299; method: REML)
 ## 
-##    logLik   Deviance        AIC        BIC       AICc 
-## -268.1654   536.3308   540.3308   547.7250   540.3715   
+##    logLik   Deviance        AIC        BIC       AICc  
+## -268.1654   536.3308   540.3308   547.7250   540.3715  
 ## 
-## Variance Components:
+## Variance Components: 
 ## 
-##             estim    sqrt  nlvls  fixed      factor 
-## sigma^2    0.0367  0.1916     68     no  short_cite 
+##             estim    sqrt  nlvls  fixed      factor
+## sigma^2    0.0367  0.1916     68     no  short_cite
 ## 
-## Test for Heterogeneity:
+## Test for Heterogeneity: 
 ## Q(df = 298) = 1143.3988, p-val &lt; .0001
 ## 
 ## Model Results:
 ## 
-## estimate      se    zval    pval   ci.lb   ci.ub 
-##   0.1832  0.0264  6.9494  &lt;.0001  0.1315  0.2349  *** 
+## estimate      se    zval    pval   ci.lb   ci.ub     
+##   0.1832  0.0264  6.9494  &lt;.0001  0.1315  0.2349  ***
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -758,25 +758,25 @@ A caveat is that conventions on what counts as experiment and what counts as con
 <pre><code>## 
 ## Multivariate Meta-Analysis Model (k = 299; method: REML)
 ## 
-##    logLik   Deviance        AIC        BIC       AICc 
-## -211.2785   422.5570   428.5570   439.6483   428.6386   
+##    logLik   Deviance        AIC        BIC       AICc  
+## -211.2785   422.5570   428.5570   439.6483   428.6386  
 ## 
-## Variance Components:
+## Variance Components: 
 ## 
 ## outer factor: short_cite       (nlvls = 68)
 ## inner factor: factor(expt_num) (nlvls = 15)
 ## 
-##             estim    sqrt  fixed 
-## tau^2      0.0635  0.2521     no 
-## rho        0.2483             no 
+##             estim    sqrt  fixed
+## tau^2      0.0635  0.2521     no
+## rho        0.2483             no
 ## 
-## Test for Heterogeneity:
+## Test for Heterogeneity: 
 ## Q(df = 298) = 1143.3988, p-val &lt; .0001
 ## 
 ## Model Results:
 ## 
-## estimate      se    zval    pval   ci.lb   ci.ub 
-##   0.1837  0.0265  6.9291  &lt;.0001  0.1318  0.2357  *** 
+## estimate      se    zval    pval   ci.lb   ci.ub     
+##   0.1837  0.0265  6.9291  &lt;.0001  0.1318  0.2357  ***
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -793,8 +793,8 @@ A caveat is that conventions on what counts as experiment and what counts as con
 <pre><code>## 
 ## Mixed-Effects Model (k = 299; tau^2 estimator: REML)
 ## 
-##    logLik   deviance        AIC        BIC       AICc 
-## -144.5660   289.1320   295.1320   306.2132   295.2139   
+##    logLik   deviance        AIC        BIC       AICc  
+## -144.5660   289.1320   295.1320   306.2132   295.2139  
 ## 
 ## tau^2 (estimated amount of residual heterogeneity):     0.1027 (SE = 0.0116)
 ## tau (square root of estimated tau^2 value):             0.3205
@@ -802,17 +802,17 @@ A caveat is that conventions on what counts as experiment and what counts as con
 ## H^2 (unaccounted variability / sampling variability):   4.36
 ## R^2 (amount of heterogeneity accounted for):            0.00%
 ## 
-## Test for Residual Heterogeneity:
+## Test for Residual Heterogeneity: 
 ## QE(df = 297) = 1141.6702, p-val &lt; .0001
 ## 
-## Test of Moderators (coefficient 2):
+## Test of Moderators (coefficient(s) 2): 
 ## QM(df = 1) = 0.3885, p-val = 0.5331
 ## 
 ## Model Results:
 ## 
-##          estimate      se    zval    pval    ci.lb   ci.ub 
-## intrcpt    0.2099  0.0218  9.6125  &lt;.0001   0.1671  0.2527  *** 
-## mods       0.0002  0.0003  0.6233  0.5331  -0.0004  0.0007      
+##          estimate      se    zval    pval    ci.lb   ci.ub     
+## intrcpt    0.2099  0.0218  9.6125  &lt;.0001   0.1671  0.2527  ***
+## mods       0.0002  0.0003  0.6233  0.5331  -0.0004  0.0007     
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -823,25 +823,25 @@ A caveat is that conventions on what counts as experiment and what counts as con
 <pre><code>## 
 ## Multivariate Meta-Analysis Model (k = 299; method: REML)
 ## 
-##    logLik   Deviance        AIC        BIC       AICc 
-## -263.7595   527.5190   533.5190   544.6002   533.6009   
+##    logLik   Deviance        AIC        BIC       AICc  
+## -263.7595   527.5190   533.5190   544.6002   533.6009  
 ## 
-## Variance Components:
+## Variance Components: 
 ## 
-##             estim    sqrt  nlvls  fixed      factor 
-## sigma^2    0.0414  0.2035     68     no  short_cite 
+##             estim    sqrt  nlvls  fixed      factor
+## sigma^2    0.0414  0.2035     68     no  short_cite
 ## 
-## Test for Residual Heterogeneity:
+## Test for Residual Heterogeneity: 
 ## QE(df = 297) = 1141.6702, p-val &lt; .0001
 ## 
-## Test of Moderators (coefficient 2):
+## Test of Moderators (coefficient(s) 2): 
 ## QM(df = 1) = 9.6131, p-val = 0.0019
 ## 
 ## Model Results:
 ## 
-##          estimate      se    zval    pval   ci.lb   ci.ub 
-## intrcpt    0.1806  0.0277  6.5200  &lt;.0001  0.1263  0.2349  *** 
-## mods       0.0007  0.0002  3.1005  0.0019  0.0002  0.0011   ** 
+##          estimate      se    zval    pval   ci.lb   ci.ub     
+## intrcpt    0.1806  0.0277  6.5200  &lt;.0001  0.1263  0.2349  ***
+## mods       0.0007  0.0002  3.1005  0.0019  0.0002  0.0011   **
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -853,29 +853,29 @@ A caveat is that conventions on what counts as experiment and what counts as con
 <pre><code>## 
 ## Multivariate Meta-Analysis Model (k = 299; method: REML)
 ## 
-##    logLik   Deviance        AIC        BIC       AICc 
-## -209.1634   418.3268   426.3268   441.1017   426.4638   
+##    logLik   Deviance        AIC        BIC       AICc  
+## -209.1634   418.3268   426.3268   441.1017   426.4638  
 ## 
-## Variance Components:
+## Variance Components: 
 ## 
 ## outer factor: short_cite       (nlvls = 68)
 ## inner factor: factor(expt_num) (nlvls = 15)
 ## 
-##             estim    sqrt  fixed 
-## tau^2      0.0663  0.2575     no 
-## rho        0.2952             no 
+##             estim    sqrt  fixed
+## tau^2      0.0663  0.2575     no
+## rho        0.2952             no
 ## 
-## Test for Residual Heterogeneity:
+## Test for Residual Heterogeneity: 
 ## QE(df = 297) = 1141.6702, p-val &lt; .0001
 ## 
-## Test of Moderators (coefficient 2):
+## Test of Moderators (coefficient(s) 2): 
 ## QM(df = 1) = 4.6265, p-val = 0.0315
 ## 
 ## Model Results:
 ## 
-##          estimate      se    zval    pval   ci.lb   ci.ub 
-## intrcpt    0.1819  0.0276  6.5924  &lt;.0001  0.1279  0.2360  *** 
-## mods       0.0005  0.0003  2.1509  0.0315  0.0000  0.0010    * 
+##          estimate      se    zval    pval   ci.lb   ci.ub     
+## intrcpt    0.1819  0.0276  6.5924  &lt;.0001  0.1279  0.2360  ***
+## mods       0.0005  0.0003  2.1509  0.0315  0.0000  0.0010    *
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
