deploy: 0b029c881865cc9fca52b2126faf355790db697f

--- a/app/power-simulation/index.html
+++ b/app/power-simulation/index.html
@@ -26,7 +26,7 @@
   
     
   
-  <meta name="description" content="Simulate power of meta-analyes under a variety of conditions">
+  <meta name="description" content="Simulate power of meta-analyses under a variety of conditions">
 
   <link rel="shortcut icon" href=" /favicon.ico" />
   
@@ -267,7 +267,7 @@
   <meta property="og:site_name" content="MetaLab">
   <meta property="og:url" content="https://langcog.github.io/metalab/app/power-simulation/">
   <meta property="og:title" content="Power Simulation | MetaLab">
-  <meta property="og:description" content="Simulate power of meta-analyes under a variety of conditions"><meta property="og:image" content="https://langcog.github.io/metalab/app/power-simulation/featured.png">
+  <meta property="og:description" content="Simulate power of meta-analyses under a variety of conditions"><meta property="og:image" content="https://langcog.github.io/metalab/app/power-simulation/featured.png">
   <meta property="twitter:image" content="https://langcog.github.io/metalab/app/power-simulation/featured.png"><meta property="og:locale" content="en-us">
   
     
