--- a/app/index.html
+++ b/app/index.html
@@ -579,7 +579,7 @@
       <h2><a href="https://langcog.github.io/metalab/app/power-simulation/" >Power Simulation</a></h2>
       <div class="article-style">
         
-          Simulate power of meta-analyes under a variety of conditions
+          Simulate power of meta-analyses under a variety of conditions
         
       </div>
     </div>
