deploy: 2a3b86e171f4be6f7ae58ab6aba2ab96163afb20

--- a/people/christina/index.html
+++ b/people/christina/index.html
@@ -26,7 +26,7 @@
   
     
   
-  <meta name="description" content="chbergma@gmail.com &lt;br /&gt; https://sites.google.com/site/chbergma/ &lt;br&gt; Max Planck Institute for Psycholinguistics">
+  <meta name="description" content="chbergma@gmail.com &lt;br /&gt; https://sites.google.com/site/chbergma/ &lt;br&gt; Osnabrück University of Applied Sciences and Max Planck Institute for Psycholinguistics">
 
   <link rel="shortcut icon" href=" /favicon.ico" />
   
@@ -267,7 +267,7 @@
   <meta property="og:site_name" content="MetaLab">
   <meta property="og:url" content="https://langcog.github.io/metalab/people/christina/">
   <meta property="og:title" content="Christina Bergmann | MetaLab">
-  <meta property="og:description" content="chbergma@gmail.com &lt;br /&gt; https://sites.google.com/site/chbergma/ &lt;br&gt; Max Planck Institute for Psycholinguistics"><meta property="og:image" content="https://langcog.github.io/metalab/people/christina/featured.jpg">
+  <meta property="og:description" content="chbergma@gmail.com &lt;br /&gt; https://sites.google.com/site/chbergma/ &lt;br&gt; Osnabrück University of Applied Sciences and Max Planck Institute for Psycholinguistics"><meta property="og:image" content="https://langcog.github.io/metalab/people/christina/featured.jpg">
   <meta property="twitter:image" content="https://langcog.github.io/metalab/people/christina/featured.jpg"><meta property="og:locale" content="en-us">
   
     
