--- a/team/index.html
+++ b/team/index.html
@@ -635,7 +635,7 @@
     
     <a href="https://langcog.github.io/metalab/people/christina/" class="summary-link">
       <div class="article-style">
-        <a href="mailto:chbergma@gmail.com">chbergma@gmail.com</a> <br /> <a href="https://sites.google.com/site/chbergma/" target="_blank" rel="noopener">https://sites.google.com/site/chbergma/</a> <br> Max Planck Institute for Psycholinguistics
+        <a href="mailto:chbergma@gmail.com">chbergma@gmail.com</a> <br /> <a href="https://sites.google.com/site/chbergma/" target="_blank" rel="noopener">https://sites.google.com/site/chbergma/</a> <br> Osnabrück University of Applied Sciences and Max Planck Institute for Psycholinguistics
       </div>
     </a>
     
