--- a/people/index.html
+++ b/people/index.html
@@ -591,7 +591,7 @@
       <h2><a href="https://langcog.github.io/metalab/people/christina/" >Christina Bergmann</a></h2>
       <div class="article-style">
         
-          chbergma@gmail.com https://sites.google.com/site/chbergma/ Max Planck Institute for Psycholinguistics
+          chbergma@gmail.com https://sites.google.com/site/chbergma/ Osnabrück University of Applied Sciences and Max Planck Institute for Psycholinguistics
         
       </div>
     </div>
